--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Hi! I'm Albert, a Computer Science major at UCLA."
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
